--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: "gcc:latest"
+      - image: gcc:latest
     steps:
       - checkout
       - run:
