--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,7 @@ addons:
 
 before_install:
 - echo "hiNick"
-- apt-get update && apt-get install -y sudo && rm -rf /var/lib/apt/lists/*
-- apt-get update && sudo apt-get install -y cmake
+- brew update && brew install cmake
 script:
 - cmake -H. -Bbuild
 - cmake --build build
