Squashed splitting into two header files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,6 @@ set(CMAKE_CXX_STANDARD 20)
 project(CPP-Channels)
 
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
-add_executable(channels_test ${PROJECT_SOURCE_DIR}/src/channelsTest.cpp)
+
+file(GLOB SOURCES "src/*.cpp")
+add_executable(channels_test ${SOURCES})
