--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,4 +9,4 @@ set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
 
 include_directories(include)
 file(GLOB SOURCES "src/*.cpp")
-add_executable(channels_test ${PROJECT_SOURCE_DIR}/src/channelsTest.cpp)
+add_executable(channels_test ${SOURCES})
